<resources>
    <string name="app_name">Hangular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai_belajar">Mulai Belajar</string>
    <string name="mulai_quiz">Mulai Quiz</string>
    <string name="mulai_belajar_konsonan">Mulai Belajar Konsonan</string>
    <string name="mulai_belajar_huruf_vokal">Mulai Belajar Huruf Vokal</string>
    <string name="mulai_belajar_cara_membaca">Mulai Belajar Cara Membaca</string>
    <string name="mulai_quiz_sulit">Mulai Quiz Sulit</string>
    <string name="mulai_quiz_menengah">Mulai Quiz Menengah</string>
    <string name="mulai_quiz_mudah">Mulai Quiz Mudah</string>
    <string name="nama">nama</string>
    <string name="hangul">hangul</string>
    <string name="cara_membaca">Cara membaca/melafalkan</string>
    <string name="mainkan_suara">Mainkan Suara</string>
    <string name="paragraf_1">Cara membaca huruf Han-geul tidak sama dengan cara membaca huruf romawi dalam tulisan bahasa Indonesia yang memiliki satu bunyi dalam satu huruf, karena dalam han-geul terdapat beberapa huruf yang memiliki dua atau lebih bunyi dalam satu huruf apabila dibaca pada posisi yang berbeda.</string>
    <string name="paragraf_2">Contoh, huruf kiyôk [ㄱ] terkadang dibaca \'K\' ataupun \'G\' tergantung letak posisinya dalam suku kata. Misalnya dalam kata 가격 [kagyôk] terdapat 3 buah huruf kiyôk [ㄱ] yang masing-masing berada pada posisi awal, tengah, dan pada akhir suku kata. Dalam hal ini ㄱ dibaca \'K\' pada posisi awal dan akhir, dan ㄱ dibaca \'G\' pada posisi tengah.</string>
    <string name="aturan">Aturan baca 오 [o], 어 [ô], ㅎ [h/t], ㅇ [~/ng]:</string>
    <string name="aturan_1">- Huruf vokal 어 [ô] dan 여 [yô] dalam romanisasi umum biasanya ditulis 어 [eo], 여 [yeo], dibaca tegas dan bentuk mulut bulat agak lebar ketika mengucapkannya.</string>
    <string name="aturan_2">- Sebaliknya huruf vokal 오 [o] dan 요 [yo] dibaca tidak tegas dan bentuk mulut bulat kecil seperti menggabungkan bunyi antara \'O\' dan \'U\' ketika mengucapkannya.</string>
    <string name="aturan_3">- Huruf konsonan ㅇ [~/ng] pada posisi awal dan tengah suku kata tidak dibaca, dan hanya dibaca \'ng\' ketika berada pada akhir suku kata.</string>
    <string name="aturan_4">- Huruf konsonan ㅎ [h/t] hanya dibaca \'H\' pada awal suku kata, di tengah dibaca lemah atau terkadang tidak dibaca sama sekali, dan di akhir suku kata dibaca \'T\' atau juga tidak dibaca.</string>
    <string name="cara_baca_hangul">CARA BACA HANGUL</string>
    <string name="konsonan">KONSONAN</string>
    <string name="awal">AWAL</string>
    <string name="tengah">TENGAH</string>
    <string name="akhir">AKHIR</string>
    <string name="nama_2">NAMA</string>
    <string name="logo_hangular">Logo Hangular</string>
    <string name="skor_anda">Skor Anda :</string>
    <string name="skor_tertinggi">Skor Tertinggi :</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
</resources>