<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.baca.CaraBacaActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cara_baca_hangul"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/paragraf_1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/paragraf_2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3,4"
            android:layout_marginTop="16dp"
            android:id="@+id/tabel"
            android:layout_below="@+id/textView4">

            <TableRow
                android:background="@color/design_default_color_primary_dark">

                <TextView
                    android:text="@string/nama_2"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/konsonan"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/awal"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/tengah"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/akhir"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:listitem="@layout/tabel_konsonan" />

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aturan"
            android:layout_below="@id/tabel"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/aturan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aturan_1"
            android:layout_below="@id/aturan"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/aturan_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aturan_2"
            android:layout_below="@id/aturan_1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/aturan_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aturan_3"
            android:layout_below="@id/aturan_2"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/aturan_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aturan_4"
            android:layout_below="@id/aturan_3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/aturan_4"/>

    </RelativeLayout>

</ScrollView>