<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".ui.quiz.QuizActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:padding="4dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/question"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:textColor="@color/white"
        android:padding="8dp"
        android:onClick="onClick"
        android:layout_marginBottom="24dp"
        android:id="@+id/choice1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:textColor="@color/white"
        android:padding="8dp"
        android:onClick="onClick"
        android:layout_marginBottom="24dp"
        android:id="@+id/choice2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textColor="@color/white"
        android:padding="8dp"
        android:onClick="onClick"
        android:layout_marginBottom="24dp"
        android:id="@+id/choice3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textColor="@color/white"
        android:padding="8dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/choice4"
        android:onClick="onClick" />
</LinearLayout>
