<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuBelajarFragment">

    <ImageButton
        android:id="@+id/btn_menengah"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:contentDescription="@string/mulai_quiz_mudah"
        android:scaleType="fitXY"
        android:src="@drawable/menengah"
        android:background="@color/material_on_background_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_mudah"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/mulai_quiz_menengah"
        android:scaleType="fitXY"
        android:src="@drawable/mudah"
        android:background="@color/material_on_background_disabled"
        app:layout_constraintBottom_toTopOf="@+id/btn_menengah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_sulit"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/mulai_quiz_sulit"
        android:scaleType="fitXY"
        android:src="@drawable/sulit"
        android:background="@color/material_on_background_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_menengah" />

</androidx.constraintlayout.widget.ConstraintLayout>